@@ -5,6 +5,7 @@
 * Bug Fixes:
   * Fixed bug when receiving a 304 response (HTTPNotModified) on a page not
     cached in history.
+  * #21428 Default to HTML parser for 'application/xhtml+xml' content-type.
 
 === 0.7.7
 
